fix alignment of the popup window for mobile and desktop version

--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@ body {
   gap: 12px;
   position: absolute;
   width: 343px;
-  height: 713px;
-  left: calc(50% - 343px/2);
+  height: auto;
+  left: calc(46% - 343px/2);
   top: 28px;
   background: #FFFFFF;
   border: 1px solid #DFE1E6;
@@ -120,7 +120,7 @@ body {
 
 .modal-desc {
   width: 100%;
-  height: 220px;
+  height: auto;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
@@ -130,9 +130,14 @@ body {
 }
 
 .modal-tech-list ul {
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   gap: 10px;
+}
+
+.footer-list hr {
+  margin: 20px;
 }
 
 .modal-tech-list ul li {
